<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Numier PDA</string>
    <string name="logo_numier">Logotipo Numier</string>
    <string name="connect">Conectar</string>
    <string name="developed_nexodo">Desarrollado por Nexodo Digital S.L.</string>
    <string name="version_pda">Versión 4.0.0</string>
    <string name="welcome_message">Bienvenido a</string>
    <string name="favorite_connections">Conexiones favoritas</string>
    <string name="no_favorite_connections">No hay ninguna conexión guardada</string>
    <string name="select_favorite_connections">Seleccione una conexión</string>
    <string name="delete_fail_connection">Ha habido un error al borrar la conexión</string>
    <string name="delete_connection">Eliminar conexión</string>
    <string name="scan_qr">Conexión mediante código QR</string>
    <string name="scan">Escanear</string>
    <string name="conf_manual">Conexión manual</string>
    <string name="url_pda">URL del servidor PDA</string>
    <string name="pass_pda">Clave del servidor PDA</string>
    <string name="connect_pda">Datos de conexión</string>
    <string name="info_connect">Puede encontrar el codigo QR o los datos de conexión en el apartado Numier PDA dentro de la configuración de Numier TPV.\n\n Para mas información consulte con su distribuidor.</string>
    <string name="complete_input">Rellene todos los campos</string>
    <string name="wait_moment">Espere un momento</string>
    <string name="connecting_server">Conectando con servidor Numier PDA</string>.
    <string name="attention">Atención</string>
    <string name="server_and_pda_distinc_net">El servidor y el dispositivo no se encuentran en la misma red:</string>
    <string name="ip_pda">IP Dispositivo:</string>
    <string name="ip_server">IP Servidor:</string>
    <string name="server_and_pda_equals_ip">La dirección IP de su dispositivo no puede ser la misma que la del servidor. Reinicie el dispositivo o cambie la ip manualmente.</string>
    <string name="level_pda_low">La intensidad de la conexión del dispositivo es muy baja.</string>
    <string name="connect_server_fail">No es posible conectarse al servidor. Reinicie el equipo TPV y el dispositivo.</string>
    <string name="close">Cerrar</string>
    <string name="prompt_scan_qr">Coloque el codigo QR en el interior del visor para escanear.</string>
    <string name="scan_qr_cancelled">Escaneo de codiogo QR cancelado</string>
    <string name="config_data">Datos de configuración</string>
    <string name="select_worker">Seleccione el operario</string>
    <string name="select_rate">Seleccione la tarifa</string>
    <string name="input_name_pda">Introduzca el nombre del dispositivo</string>
    <string name="input_name_favorite">Introduzca el nombre de la conexión</string>
    <string name="finish">Finalizar</string>
    <string name="loading">Cargando</string>
    <string name="splash_info">Descargando datos del sistema Numier TPV. \n\nEste proceso puede tardar unos minutos. \n\nEspere por favor.</string>
    <string name="downloading_workers">Descargando operarios</string>
    <string name="inserting_products">Insertando Productos</string>
    <string name="inserting_subproducts">Insertando Subproductos</string>
    <string name="inserting_products_subproducts">Insertando Relación de Subproductos</string>
    <string name="inserting_modifiers">Insertando Modificadores</string>
    <string name="rateDefault">Tarifa: 1</string>
    <string name="cash">Caja</string>
    <string name="settings">Ajustes</string>
    <string name="exit">Salir</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_cancel">¿Está seguro de que desea salir?</string>
    <string name="name_pda">Nombre del dispositivo</string>
    <string name="check_version">Comprobar versión</string>
    <string name="worker">Operario</string>
    <string name="rate">Tarifa</string>
    <string name="tools">Utilidades</string>
    <string name="reload_data">Recargar datos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="summary_logout">Cierra la sesión en el dispositvo y permite configurar una sesión nueva</string>
    <string name="summary_reload_data">Descarga los ultimos cambios de Numier TPV</string>
    <string name="summary_check_version">Comprueba si hay una nueva versión de Numier PDA</string>
    <string name="general">General</string>
    <string name="checking_last_version">Comprobando última versión...</string>
    <string name="no_new_version">No hay ninguna versión para actualizar</string>
    <string name="downloading_last_version">Descargqando última versión...</string>
    <string name="fail_update">No se ha podido actualizar</string>
    <string name="separator">Separador</string>
    <string name="saveBill">Guardar cuenta</string>
    <string name="pointBill">Apuntar cuenta</string>
    <string name="recoverBill">Recuperar cuenta</string>
    <string name="printer">Impresora</string>
    <string name="options">Opciones</string>
    <string name="search">Buscar</string>
    <string name="back">Atrás</string>
    <string name="num_mesa">Num. Mesa</string>
    <string name="table">Mesa: </string>
    <string name="confirmation">Confirmación</string>
    <string name="alert_save_bill">Hay una cuenta en pantalla que debe guardar antes de volver.\n\n¿GUARDAR AHORA?\n</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="select_option">Seleccione una opción</string>
    <string name="name_product">Nombre producto</string>
    <string name="search_product">Buscar producto</string>
    <string name="num_dinners">Nº de comensales</string>
    <string name="analyzing">Analizando</string>
    <string name="splash_info_analyzing">Analizando datos del sistema Numier TPV. \n\nEste proceso puede tardar unos minutos. \n\nEspere por favor.</string>
    <string name="total">Total:</string>
    <string name="annul">Anular</string>
    <string name="charge">Cobrar</string>
    <string name="text_size">Tamaño del texto</string>
    <string name="number_columns">Numero de columnas</string>
    <string name="optiones_gui">Opciones de interfaz</string>
    <string name="specify_price_product">Especifique el precio del producto</string>
    <string name="specify_weight_product">Especifique el peso del producto</string>
    <string name="select_num_subproduct">Seleccione Subproducto Nº</string>
    <string name="messageHintDialog">Puede escribir un mensaje</string>
    <string name="input_message_product">Introduzca un mensaje para el producto</string>
    <string name="product_not_defined">Artículo no definido</string>
    <string name="specify_discount">Especifique el descuento</string>
    <string name="fail_discount_100">El descuento no puede ser mayor de 100</string>
    <string name="discount_delete">Descuento eliminado</string>
    <string name="info_delete_discount">El descuento se borrará, ¿Desea continuar?</string>
    <string name="delete_line">Eliminar línea</string>
    <string name="modify_uds">Modificar cantidad</string>
    <string name="modify_price">Modificar precio</string>
    <string name="modify_num_plato">Modificar Num Plato</string>
    <string name="message_to_printer">Mensaje a impresora</string>
    <string name="select_modifiers">Seleccionar modificadores</string>
    <string name="see_description">Ver descripción</string>
    <string name="info_delete_item">La linea de pedido se borrará, ¿Desea continuar?</string>
    <string name="info_not_authorized_delete_item">ATENCIÓN: No puede eliminar este producto. Debe hacerlo desde el TPV.</string>
    <string name="info_not_authorized_modify_item">ATENCIÓN: No puede modificar este producto. Debe hacerlo desde el TPV.</string>
    <string name="weight_not_zero">El peso no puede ser 0</string>
    <string name="uds_not_zero">Las unidades no pueden ser 0</string>
    <string name="specify_uds_product">Especifique las unidades del producto</string>
    <string name="specify_num_plato_product">Especifique el numero de plato del producto</string>
    <string name="product_without_descripction">Este producto no tiene descripción</string>
    <string name="info_select_product_before_modifer">Debe seleccionar un producto antes de elegir un modificador</string>
    <string name="fail_header_without_details">No puede apuntar una cuenta sin detalles</string>
    <string name="alert_get_bill_and_save">Va a recuperar una cuenta, ¿Desea guardar la que está en pantalla primero?</string>
    <string name="getting_accounts">Recuperando cuentas</string>
    <string name="get_account">Recuperar cuenta</string>
    <string name="getting_account">Recuperando los datos de la cuenta</string>


</resources>