<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:textColor="#737373"
        android:text="@string/welcome_message"
        android:textSize="35sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#737373"
            android:text="@string/version_pda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_nexodo"
            android:textColor="#000" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="@string/connect"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/buttonFavorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/favorite_connections"
            android:src="@mipmap/ic_favorite_connections"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeMessage"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_numier"
        android:scaleType="centerInside"
        android:src="@drawable/numier" />

</RelativeLayout>