<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_numier"
        android:src="@drawable/numier" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/background_main"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/rateMainFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/rateDefault"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/caja"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:text="@string/cash" />

        <LinearLayout
            android:id="@+id/panelConfExit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <Button
                android:id="@+id/conf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/conf" />

            <Button
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:gravity="center">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/version_pda"/>
    </LinearLayout>

</LinearLayout>