<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/inputMessageDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:hint="@string/messageHintDialog"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLength="40"
        android:maxLines="3"
        android:textColor="#000"
        android:textSize="18sp" />


    <GridView
        android:id="@+id/gridViewDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:horizontalSpacing="5dp"
        android:numColumns="2"
        android:verticalSpacing="5dp" />



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelMessageDialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonAcceptMessageDialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/selector_button_cash"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>