<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="9"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp" />

    <LinearLayout
        android:id="@+id/layoutTotal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#9a9a9a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:text="@string/total"
                android:textColor="#000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/billAmount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:text="0.00 €"
                android:textColor="#000"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVentas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelAccount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_button_cancel"
            android:text="@string/annul"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cashAccount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_button_cash"
            android:text="@string/charge"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

